// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User Component tests > Account Page 1`] = `
<div>
  <div
    class="_user_e9c5ca"
  >
    <nav
      class="_leftColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <ul>
          <li>
            <a
              aria-current="page"
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296 _active_f8f296"
              href="/u/my-account"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
                  />
                </svg>
              </div>
              <span>
                nav.account
              </span>
            </a>
          </li>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/u/payments"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                  />
                </svg>
              </div>
              <span>
                nav.payments
              </span>
            </a>
          </li>
          <li
            class="_logoutLi_e9c5ca"
          >
            <button
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              type="button"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z"
                  />
                </svg>
              </div>
              <span>
                nav.logout
              </span>
            </button>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="_mainColumn_e9c5ca"
    />
  </div>
</div>
`;

exports[`User Component tests > Favorites Page 1`] = `
<div>
  <div
    class="_user_e9c5ca"
  >
    <nav
      class="_leftColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <ul>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/u/my-account"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
                  />
                </svg>
              </div>
              <span>
                nav.account
              </span>
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296 _active_f8f296"
              href="/u/favorites"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
                  />
                </svg>
              </div>
              <span>
                nav.favorites
              </span>
            </a>
          </li>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/u/payments"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                  />
                </svg>
              </div>
              <span>
                nav.payments
              </span>
            </a>
          </li>
          <li
            class="_logoutLi_e9c5ca"
          >
            <button
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              type="button"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z"
                  />
                </svg>
              </div>
              <span>
                nav.logout
              </span>
            </button>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="_mainColumn_e9c5ca"
    />
  </div>
</div>
`;

exports[`User Component tests > Payments Page 1`] = `
<div>
  <div
    class="_user_e9c5ca"
  >
    <nav
      class="_leftColumn_e9c5ca"
    >
      <div
        class="_panel_e9c5ca"
      >
        <ul>
          <li>
            <a
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              href="/u/my-account"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
                  />
                </svg>
              </div>
              <span>
                nav.account
              </span>
            </a>
          </li>
          <li>
            <a
              aria-current="page"
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296 _active_f8f296"
              href="/u/payments"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5,3C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V16.72C21.59,16.37 22,15.74 22,15V9C22,8.26 21.59,7.63 21,7.28V5A2,2 0 0,0 19,3H5M5,5H19V7H13A2,2 0 0,0 11,9V15A2,2 0 0,0 13,17H19V19H5V5M13,9H20V15H13V9M16,10.5A1.5,1.5 0 0,0 14.5,12A1.5,1.5 0 0,0 16,13.5A1.5,1.5 0 0,0 17.5,12A1.5,1.5 0 0,0 16,10.5Z"
                  />
                </svg>
              </div>
              <span>
                nav.payments
              </span>
            </a>
          </li>
          <li
            class="_logoutLi_e9c5ca"
          >
            <button
              class="_button_f8f296 _button_e9c5ca _default_f8f296 _text_f8f296"
              type="button"
            >
              <div
                class="_startIcon_f8f296"
              >
                <svg
                  aria-hidden="true"
                  class="_icon_585b29"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z"
                  />
                </svg>
              </div>
              <span>
                nav.logout
              </span>
            </button>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="_mainColumn_e9c5ca"
    />
  </div>
</div>
`;
